[gd_scene load_steps=15 format=1]

[ext_resource path="res://screens/abstract_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/market/market_theme.tres" type="Theme" id=2]
[ext_resource path="res://screens/market/market_screen.gd" type="Script" id=3]
[ext_resource path="res://screens/market/thumbnails/thumbnail.tscn" type="PackedScene" id=4]
[ext_resource path="res://screens/market/thumbnails/gatherer.png" type="Texture" id=5]
[ext_resource path="res://screens/market/thumbnails/soil_specialist.png" type="Texture" id=6]
[ext_resource path="res://screens/market/thumbnails/botanic_engineer.png" type="Texture" id=7]
[ext_resource path="res://screens/market/thumbnails/mechanic.png" type="Texture" id=8]
[ext_resource path="res://screens/market/thumbnails/plumber.png" type="Texture" id=9]
[ext_resource path="res://screens/market/thumbnails/tillage.png" type="Texture" id=10]
[ext_resource path="res://screens/market/thumbnails/truck.png" type="Texture" id=11]
[ext_resource path="res://screens/market/thumbnails/harvester.png" type="Texture" id=12]
[ext_resource path="res://screens/market/contract.tscn" type="PackedScene" id=13]
[ext_resource path="res://screens/market/petals.png" type="Texture" id=14]

[node name="MarketScreen" instance=ExtResource( 1 )]

focus/ignore_mouse = true
theme/theme = ExtResource( 2 )
script/script = ExtResource( 3 )
min_wage = "The government of your state passed a new minimum wage.

Every worker that doesn't produce above $ %s,00 is out of the market, except gatherers."
machine_regulation = "A new regulation in agricultural machines has passed in the congress.

All machines prices raised by: {tax}%"
new_contract_law = "The government is intervening on current agriculture contracts. 

No hirers can demand more than ${amount},00 in production"
next_scene = "res://screens/storehouse/storehouse_screen.tscn"

[node name="Buying" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 85.0
margin/top = 138.0
margin/right = 312.0
margin/bottom = 520.0
alignment = 0

[node name="PanelContainer" type="PanelContainer" parent="Buying"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 227.0
margin/bottom = 382.0

[node name="MarginContainer" type="MarginContainer" parent="Buying/PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 227.0
margin/bottom = 382.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="ScrollingContainer" type="ScrollContainer" parent="Buying/PanelContainer/MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 15.0
margin/right = 212.0
margin/bottom = 367.0
scroll/horizontal = false
scroll/vertical = true

[node name="List" type="VBoxContainer" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 179.0
margin/bottom = 615.0
custom_constants/separation = 15
alignment = 0

[node name="Thumbnail" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List" groups=[
"worker",
"buying",
"gatherer",
] instance=ExtResource( 4 )]

editor/display_folded = true
margin/right = 179.0
margin/bottom = 64.0
price = 0.0
monthly_cost = 500.0
production = 670.0
type = 0
name = "Gatherer"
description = "{name}
Wage: ${wage}
Production: ${production}
Type: {type}"

[node name="Button" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail"]

textures/normal = ExtResource( 5 )

[node name="Description" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail"]

margin/right = 179.0

[node name="Thumbnail1" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List" groups=[
"worker",
"buying",
"specialist",
] instance=ExtResource( 4 )]

editor/display_folded = true
margin/top = 79.0
margin/right = 179.0
margin/bottom = 143.0
price = 0.0
monthly_cost = 3000.0
production = 3100.0
type = 0
name = "Soil Specialist"
description = "{name}
Wage: ${wage}
Production: ${production}
Type: {type}"

[node name="Button" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail1"]

textures/normal = ExtResource( 6 )

[node name="Description" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail1"]

margin/right = 179.0

[node name="Thumbnail4" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List" groups=[
"worker",
"buying",
"engineer",
] instance=ExtResource( 4 )]

editor/display_folded = true
margin/top = 158.0
margin/right = 179.0
margin/bottom = 222.0
price = 0.0
monthly_cost = 1100.0
production = 1500.0
type = 0
name = "Botanic Engineer"
description = "{name}
Wage: ${wage}
Production: ${production}
Type: {type}"

[node name="Button" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail4"]

textures/normal = ExtResource( 7 )

[node name="Description" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail4"]

margin/right = 179.0

[node name="Thumbnail2" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List" groups=[
"worker",
"buying",
"mechanic",
] instance=ExtResource( 4 )]

editor/display_folded = true
margin/top = 237.0
margin/right = 179.0
margin/bottom = 299.0
price = 0.0
monthly_cost = 1200.0
production = 1500.0
type = 0
name = "Mechanic"
description = "{name}
Wage: ${wage}
Production: ${production}
Type: {type}"

[node name="Button" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail2"]

margin/right = 62.0
margin/bottom = 62.0
textures/normal = ExtResource( 8 )

[node name="Description" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail2"]

margin/left = 66.0
margin/right = 179.0
margin/bottom = 62.0

[node name="Thumbnail3" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List" groups=[
"worker",
"buying",
"plumber",
] instance=ExtResource( 4 )]

editor/display_folded = true
margin/top = 314.0
margin/right = 179.0
margin/bottom = 378.0
price = 0.0
monthly_cost = 800.0
production = 1400.0
type = 0
name = "Plumber"
description = "{name}
Wage: ${wage}
Production: ${production}
Type: {type}"

[node name="Button" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail3"]

textures/normal = ExtResource( 9 )

[node name="Description" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail3"]

margin/right = 179.0

[node name="Thumbnail5" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List" groups=[
"buying",
"machines",
"tillage",
] instance=ExtResource( 4 )]

editor/display_folded = true
margin/top = 393.0
margin/right = 179.0
margin/bottom = 457.0
price = 5000.0
monthly_cost = 310.0
production = 6000.0
name = "Tillage"
description = "{name}
Price: ${price}
Monthly: ${monthly}
Production: ${production}
Type: {type}"

[node name="Button" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail5"]

textures/normal = ExtResource( 10 )

[node name="Description" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail5"]

margin/right = 179.0

[node name="Thumbnail6" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List" groups=[
"buying",
"machines",
"truck",
] instance=ExtResource( 4 )]

editor/display_folded = true
margin/top = 472.0
margin/right = 179.0
margin/bottom = 536.0
price = 3000.0
monthly_cost = 210.0
production = 3800.0
name = "Truck"
description = "{name}
Price: ${price}
Monthly: ${monthly}
Production: ${production}
Type: {type}"

[node name="Button" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail6"]

textures/normal = ExtResource( 11 )

[node name="Description" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail6"]

margin/right = 179.0

[node name="Thumbnail7" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List" groups=[
"buying",
"machines",
"harvester",
] instance=ExtResource( 4 )]

editor/display_folded = true
margin/top = 551.0
margin/right = 179.0
margin/bottom = 615.0
price = 4000.0
monthly_cost = 500.0
production = 8000.0
name = "Harvester"
description = "{name}
Price: ${price}
Monthly: ${monthly}
Production: ${production}
Type: {type}"

[node name="Button" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail7"]

textures/normal = ExtResource( 12 )

[node name="Description" parent="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail7"]

margin/right = 179.0

[node name="Finish" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 429.0
margin/top = 521.0
margin/right = 629.0
margin/bottom = 573.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "finish"
flat = false

[node name="Contracts" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 429.0
margin/top = 451.0
margin/right = 629.0
margin/bottom = 503.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "contracts"
flat = false

[node name="ContractPanel" type="ColorFrame" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
color = Color( 0.0976563, 0.0923157, 0.0923157, 0.622941 )

[node name="Panel" type="Panel" parent="ContractPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 0.0
margin/right = 792.0
margin/bottom = 601.0

[node name="Title" type="Label" parent="ContractPanel/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 593.0
margin/bottom = 36.0
text = "Contracts"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Contracts" type="MarginContainer" parent="ContractPanel/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 36.0
margin/right = 593.0
margin/bottom = 596.0
custom_constants/margin_right = 6
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="ScrollContainer" type="ScrollContainer" parent="ContractPanel/Panel/Contracts"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 15.0
margin/right = 587.0
margin/bottom = 545.0
scroll/horizontal = true
scroll/vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="ContractPanel/Panel/Contracts/ScrollContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 572.0
margin/bottom = 530.0
custom_constants/separation = 30
alignment = 0

[node name="Contract" parent="ContractPanel/Panel/Contracts/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]

margin/bottom = 25.0
text = "Contract i"
demand = 1411

[node name="Contract1" parent="ContractPanel/Panel/Contracts/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]

margin/top = 55.0
margin/bottom = 80.0
text = "Contract ii"
demand = 2768

[node name="Contract2" parent="ContractPanel/Panel/Contracts/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]

margin/top = 110.0
margin/bottom = 135.0
text = "Contract iii"
demand = 7218

[node name="Contract3" parent="ContractPanel/Panel/Contracts/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]

margin/top = 165.0
margin/bottom = 190.0
text = "Contract iv"
demand = 806

[node name="Contract4" parent="ContractPanel/Panel/Contracts/ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]

margin/top = 220.0
margin/bottom = 245.0
text = "Contract v"
demand = 12841

[node name="Button" type="Button" parent="ContractPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 721.0
margin/top = 0.0
margin/right = 791.0
margin/bottom = 28.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "close"
flat = false

[node name="Info" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 107.0
margin/right = 704.0
margin/bottom = 394.0

[node name="Title" type="Label" parent="Info"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 383.0
margin/bottom = 36.0
text = "Unity Name"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Description" type="MarginContainer" parent="Info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 383.0
margin/bottom = 285.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Text" type="Label" parent="Info/Description"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 10.0
margin/top = 10.0
margin/right = 373.0
margin/bottom = 235.0
custom_constants/shadow_offset_x = 0
text = "Buying Price: XXXX,XX
Selling Price: XXXX,XX
Monthly Cost: XXXX,XX
Production: X/h

Description: Lorem ipsum dolor sit amet, modo case minim eum cu. Wisi recusabo disputando his eu, in ornatus urbanitas qui, pri libris reformidans adversarium in. Sit dicunt consequat scribentur ad. Populo aeterno ad vel, cetero nostrum philosophia nec cu.

Ex eos doming ceteros. Ridens conceptam an mei, cu iracundia conclusionemque sit, ne prompta minimum intellegat nec. Vitae repudiare assueverit sea ea, ne minimum hendrerit constituto duo. Liber scripta imperdiet at nam, vix velit salutandi splendide ex, ei veniam timeam consetetur has. Adipiscing dissentiet in his, discere voluptatum suscipiantur mea ut, eum ei quidam nostro."
align = 3
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 315.0
margin/top = 0.0
margin/right = 384.0
margin/bottom = 20.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "close"
flat = false

[node name="Confirm" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 262.0
margin/right = 640.0
margin/bottom = 358.0

[node name="Title" type="Label" parent="Confirm"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 247.0
margin/bottom = 74.0
text = "Text"
align = 3
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ok" type="Button" parent="Confirm"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 27.0
margin/top = 76.0
margin/right = 106.0
margin/bottom = 96.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Ok"
flat = false

[node name="Cancel" type="Button" parent="Confirm"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 146.0
margin/top = 76.0
margin/right = 225.0
margin/bottom = 96.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[node name="Background" type="CanvasLayer" parent="."]

layer = -5
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="ColorFrame" type="ColorFrame" parent="Background"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
color = Color( 1, 0.972549, 0.870588, 1 )

[node name="Particles" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Petals" type="Particles2D" parent="Particles"]

transform/pos = Vector2( 512, 0 )
config/amount = 32
config/lifetime = 16.0
config/process_mode = 1
config/half_extents = Vector2( 512, 0 )
config/texture = ExtResource( 14 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 20.0
params/spin_velocity = 0.1
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/hue_variation = 0.1
color/color = Color( 1, 0.670588, 0.729412, 1 )

[node name="Help" type="CanvasLayer" parent="."]

layer = 8
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Control" type="Control" parent="Help"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="ColorFrame" type="ColorFrame" parent="Help/Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
color = Color( 0.199219, 0.199219, 0.199219, 0.726745 )

[node name="Panel" type="Panel" parent="Help/Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 306.0
margin/top = 68.0
margin/right = 711.0
margin/bottom = 534.0

[node name="Label" type="Label" parent="Help/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 346.0
margin/top = 95.0
margin/right = 672.0
margin/bottom = 319.0
text = "welcome to the market screen!!

here you will have access to avaiable workers and machines for this season
you also have access to your current company, with your employees and machines.

Here you can fire, hire, buy, sell and also sign contracts to accomplish and raise some money"
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Help/Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 588.0
margin/top = 483.0
margin/right = 692.0
margin/bottom = 521.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "got it"
flat = false

[connection signal="released" from="Finish" to="." method="_on_finish_released"]

[connection signal="released" from="Contracts" to="ContractPanel" method="show"]

[connection signal="released" from="Contracts" to="Info" method="hide"]

[connection signal="released" from="ContractPanel/Button" to="ContractPanel" method="hide"]

[connection signal="released" from="Info/Button" to="Info" method="hide"]

[connection signal="released" from="Confirm/Ok" to="Confirm" method="_on_ok_released"]

[connection signal="released" from="Confirm/Cancel" to="Confirm" method="hide"]

[connection signal="released" from="Help/Control/Button" to="Help" method="queue_free"]


[editable path="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail"]
[editable path="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail1"]
[editable path="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail4"]
[editable path="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail2"]
[editable path="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail3"]
[editable path="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail5"]
[editable path="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail6"]
[editable path="Buying/PanelContainer/MarginContainer/ScrollingContainer/List/Thumbnail7"]
